<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">玩转爱车</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="mobile_register">手机注册</string>
    <string name="user_name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="mobile">手机号：</string>
    <string name="validate_code">验证码：</string>
    <string name="password">密码：</string>
    <string name="input_user_name_hint">请输入用户名</string>
    <string name="input_mobile_hint">输入手机号</string>
    <string name="input_password_hint">输入密码</string>
    <string name="get">获取</string>
    <string name="finish">完成</string>
    <string name="play">玩</string>
    <string name="maintain">养</string>
    <string name="use">用</string>
    <string name="exchange">换</string>
    <string name="me">我</string>
    <string name="more">更多</string>
    <string name="scenic_spot_intro">景点介绍</string>
    <string name="route_recommend">线路推荐</string>
    <string name="no_destination_search">无目的地查找</string>
    <string name="depart_city">出发城市</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择城市</string>
    <string name="short_distance">短途</string>
    <string name="middle_long_distance">中长途</string>
    <string name="destination_search">目的地查找</string>
    <string name="input_destination_hint">请输入目的地</string>
    <string name="search">查找</string>
    <string name="intro">简介</string>
    <string name="self_drive_event_month">自驾活动开展月</string>
    <string name="self_drive_event">自驾活动</string>
    <string name="want_go">我要去</string>
    <string name="mobile_null_hint">手机号码不能为空</string>
    <string name="password_null_hint">密码不能为空</string>
    <string name="mobile_format_error_hint">手机号格式不正确</string>
    <string name="validate_code_null_hint">请输入验证码</string>
    <string name="validate_code_error_hint">验证码错误，请重新输入</string>
    <string name="weibo_login">微博登录</string>
    <string name="qq_login">QQ 登录</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="request_failed">网络请求失败，请稍后再试</string>
    <string name="loading">正在加载\u2026</string>
    <string name="login_canceled">登录已取消</string>
    <string name="login_success">登录成功</string>
    <string name="title_activity_pay_success">PaySuccessActivity</string>
    <string name="user_center">用户中心</string>
    <string name="change_header">更换头像</string>
    <string name="score_desc">积分说明</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="user_mobile">电话</string>
    <string name="email">邮箱</string>
    <string name="selfdrive_tip">自驾游小常识</string>
    <string name="featured_selfdrive">精选自驾</string>
    <string name="signup_register">报名注册</string>
    <string name="online_pay">在线支付</string>
    <string name="pay_signup">支付报名</string>
    <string name="confirm_to_pay">确认并付款</string>
    <string name="alipay_safe_pag">支付宝安全支付</string>
    <string name="filter">筛选</string>
    <string name="escape_clause">免责条款</string>
    <string name="other_login_method">用以下方式登录</string>

</resources>