<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_layout_register_bg"
    android:orientation="vertical" >

    <com.toyota.playcar.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/user_name"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/edit_border_bg"
                    android:ems="10"
                    android:hint="@string/input_user_name_hint"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/sex"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radio_group_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/check_button_selector"
                        android:checked="true"
                        android:text="@string/man"
                        android:textColor="@color/transparent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        android:textColor="@color/text_default"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radio_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:button="@drawable/check_button_selector"
                        android:text="@string/woman"
                        android:textColor="@color/transparent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textColor="@color/text_default"
                        android:textSize="16sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/mobile"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/edit_border_bg"
                    android:ems="10"
                    android:hint="@string/input_mobile_hint"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:text="@string/validate_code"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_validate_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/edit_border_bg"
                        android:ems="10"
                        android:hint=""
                        android:inputType="number"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/text_default"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_get_validate_code"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_submit_bg_selector"
                        android:paddingBottom="@dimen/padding_normal"
                        android:paddingTop="@dimen/padding_normal"
                        android:text="@string/get"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_normal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/password"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/edit_border_bg"
                    android:ems="10"
                    android:hint="@string/input_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_submit_bg_selector"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_normal"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>