<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_layout_scenic_spot_search_bg"
    android:orientation="vertical" >

    <com.toyota.playcar.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="1.0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_destination_search"
                android:textColor="@color/text_default"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/depart_city"
                    android:textColor="@color/text_default"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_search_condition_bg_selector"
                    android:drawableRight="@drawable/ic_down_arrow"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/province"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_search_condition_bg_selector"
                    android:drawableRight="@drawable/ic_down_arrow"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/city"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_short_distance"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_btn_qq_login_bg"
                    android:text="@string/short_distance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_middle_long_distance"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/ic_btn_qq_login_bg"
                    android:text="@string/middle_long_distance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_line_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/destination_search"
                android:textColor="@color/text_default"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_border_bg"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_search"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/edit_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:hint="@string/input_destination_hint"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>