<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.toyota.playcar.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_expense_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:text=""
        android:textColor="@color/text_default"
        android:textSize="@dimen/textsize_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_middle"
        android:background="@drawable/layout_bg_default"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_launcher"
            android:gravity="center_vertical"
            android:text="@string/alipay_safe_pag"
            android:textColor="@color/text_default"
            android:textSize="@dimen/textsize_large" />

        <CheckBox
            android:id="@+id/cb_escape_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/escape_clause"
            android:textColor="@color/text_default"
            android:textSize="@dimen/textsize_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_middle"
        android:background="@drawable/btn_submit_bg_selector"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingLeft="@dimen/padding_middle"
        android:paddingRight="@dimen/padding_middle"
        android:paddingTop="@dimen/padding_normal"
        android:text="@string/confirm_to_pay"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

</LinearLayout>